# LINKEDIN_EXTRACTOR

./: .env  pyproject.toml
src/linkedin_extractor/: main.py
src/linkedin_extractor/config/: config.py
src/linkedin_extractor/schemas/: profile.py
src/linkedin_extractor/services/: apiManager.py
